# projet_PK

./: .coverage  README.md  conf.py  objects.inv  pyproject.toml  requirements.txt  search.html
.github/workflows/: ci.yml
_modules/: index.html
doc/_build/: .buildinfo  py-modindex.html
doc/_build/.doctrees/: index.doctree
doc/source/: conf.py  index.rst
docs/: README.md  genindex.html  index.html  objects.inv  pyproject.toml  searchindex.js  src.main.rst  src.rst
docs/.doctrees/: environment.pickle
docs/_build/html/: genindex.html  index.html  searchindex.js
docs/_build/html/.doctrees/: environment.pickle  index.doctree
docs/_build/html/_sources/: index.rst.txt
docs/docs/: modules.rst  projet_pk.rst
docs/source/: conf.py  index.rst
src/: __init__.py  main.py
tests/: __init__.py  conftest.py  test_main.py
